[gd_scene load_steps=15 format=3 uid="uid://bp7sj2eiok7s8"]

[ext_resource type="PackedScene" path="res://Scenes/background.tscn" id="1_y1x3o"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_yhdr0"]
[ext_resource type="PackedScene" path="res://Scenes/mode_sd.tscn" id="2_si88t"]
[ext_resource type="PackedScene" path="res://Scenes/settings_menu.tscn" id="3_ca5m6"]
[ext_resource type="PackedScene" path="res://Scenes/customization_menu.tscn" id="4_1yd53"]
[ext_resource type="PackedScene" path="res://Scenes/score_menu.tscn" id="5_etenh"]
[ext_resource type="PackedScene" path="res://Scenes/click_sound.tscn" id="5_yu4v0"]
[ext_resource type="FontFile" uid="uid://iswb6pwnyrki" path="res://Assets/Xolonium-Regular.ttf" id="7_c8lo3"]
[ext_resource type="AudioStream" uid="uid://b2t4otxdvbi2g" path="res://Assets/Audio/music.ogg" id="8_x4g5x"]

[sub_resource type="Animation" id="Animation_nyqhm"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CustomizeButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/ScoreButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/SettingsButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6icxt"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CustomizeButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/SettingsButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/ScoreButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_halum"]
_data = {
"appear": SubResource("Animation_nyqhm"),
"fade": SubResource("Animation_6icxt")
}

[sub_resource type="InputEventAction" id="InputEventAction_iiiyb"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_vswtx"]
events = [SubResource("InputEventAction_iiiyb")]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_yhdr0")
mode1 = ExtResource("2_si88t")
settings_scene = ExtResource("3_ca5m6")
customization_scene = ExtResource("4_1yd53")
score_scene = ExtResource("5_etenh")

[node name="Background" parent="." instance=ExtResource("1_y1x3o")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_halum")
}

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -168.0
offset_right = 96.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_c8lo3")
theme_override_font_sizes/font_size = 50
shortcut = SubResource("Shortcut_vswtx")
text = "Play"

[node name="CustomizeButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -43.0
offset_right = 180.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_c8lo3")
theme_override_font_sizes/font_size = 50
shortcut = SubResource("Shortcut_vswtx")
text = "Customize"

[node name="ScoreButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = 88.0
offset_right = 184.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_c8lo3")
theme_override_font_sizes/font_size = 50
shortcut = SubResource("Shortcut_vswtx")
text = "Score Board"

[node name="SettingsButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 216.0
offset_right = 147.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_c8lo3")
theme_override_font_sizes/font_size = 50
shortcut = SubResource("Shortcut_vswtx")
text = "Settings"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 32.0
offset_right = 240.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_c8lo3")
theme_override_font_sizes/font_size = 64
text = "Star Battles"
horizontal_alignment = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_x4g5x")
autoplay = true

[node name="ClickSound" parent="." instance=ExtResource("5_yu4v0")]

[node name="SceneTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CustomizeButton" to="." method="_on_customize_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ScoreButton" to="." method="_on_score_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
